--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convert-markdown-to-html",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "license": "MIT",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -41,9 +41,9 @@
   "author": "hunghg255",
   "devDependencies": {
     "@hunghg255/eslint-config-ts": "^0.0.8",
-    "@shikijs/markdown-it": "1.0.0-beta.6",
-    "@shikijs/transformers": "1.0.0-beta.6",
-    "@shikijs/twoslash": "1.0.0-beta.6",
+    "@shikijs/markdown-it": "1.0.0",
+    "@shikijs/transformers": "1.0.0",
+    "@shikijs/twoslash": "1.0.0",
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^18.19.3",
     "bumpp": "^9.2.1",
