--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "verify-commit": "verify-commit-msg",
     "prepare": "git-scm-hooks",
     "changelog": "npx changeloggithub@latest --all true && git add CHANGELOG.md && git commit -m 'chore: update CHANGELOG.md'",
-    "release": "bumpp -r && npm run changelog",
+    "prepublish": "npm run build",
+    "release": "bumpp -r",
     "gen-docs": "npx convert-markdown-to-html@latest --i docs/content.md --o docs/index.html --t \"Convert Markdown to HTML\" --g \"https://github.com/hunghg255/convert-markdown-to-html\""
   },
   "author": "hunghg255",
