--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convert-markdown-to-html",
-  "version": "0.0.39",
+  "version": "0.5.0",
   "license": "MIT",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -29,7 +29,7 @@
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
-    "test:cli": "esno src/cli.ts --i docs/index.md --o docs/index.html --t \"Convert Markdown to HTML\" --g \"https://github.com/hunghg255/convert-markdown-to-html\" --ts true",
+    "test:cli": "esno src/cli.ts --i docs/index.md --o docs/index.html --t \"Convert Markdown to HTML\" --g \"https://github.com/hunghg255/convert-markdown-to-html\"",
     "lint": "eslint --ext .ts,.tsx src --color",
     "start": "esno src/markdown-to-docs.ts",
     "test": "vitest",
@@ -52,6 +52,7 @@
     "esno": "^0.16.3",
     "git-scm-hooks": "^0.0.7",
     "hast-util-from-html": "^2.0.1",
+    "markdown-diagrams": "^0.0.3",
     "markdown-it": "^14.0.0",
     "markdown-it-abbr": "^2.0.0",
     "markdown-it-code-group": "^0.0.7",
@@ -94,5 +95,6 @@
     "markdown-it-magic-link": "^0.1.4",
     "shikiji-themes": "^0.0.2",
     "unreadconfig": "^0.0.13"
-  }
+  },
+  "packageManager": "pnpm@8.15.9+sha512.499434c9d8fdd1a2794ebf4552b3b25c0a633abcee5bb15e7b5de90f32f47b513aca98cd5cfd001c31f0db454bc3804edccd578501e4ca293a6816166bbd9f81"
 }
